--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -76,8 +76,12 @@
 				<li>
 					<%=link_to "問題回報", "https://www.facebook.com/messages/nctuplus",class:"page-scroll",target:"_blank" %>
 				</li>
-				<li>
+                                <li>
+                                  <%if current_user%>
 					<%=link_to "課程收藏", "javascript:void(0);",class:"page-scroll", onClick:"showCart();" %>
+                                  <%else%>
+                                    <%=link_to "課程收藏", "/courses/check_login" %>
+                                  <%end%>
 				</li>
 				<!-- 暫時僅提供會員課程收藏功能
 				<li>
