--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -20,7 +20,7 @@
 	<div class="main-column-wrapper row">
 		<div class="main-column">
 		
-			<div class="image-wrapper">
+			<div class="banner-wrapper">
 				<%=image_tag @event.cover.url, width:"100%", :class => "banner_image" %>
 			</div>
 			<span class="event-title">[<%=@event.event_type%>] <%=@event.title%></span>
