add hidden_type to show the slogans or not

--- a/app/views/slogan/edit.html.erb
+++ b/app/views/slogan/edit.html.erb
@@ -1,37 +1,7 @@
-<style>
-.form-article {
-  max-width: 550px;
-  padding-left:15px; 
-  padding-right:15px; 
-  padding-bottom:20px; 
-  margin: 0 auto;
-}
-.form-inline{
-    margin-top: 100px;
-}
-</style>
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-
-<body>
-<div class="container">
-<div class ="form-article">
-        <div class = "form-inline">
-            <%= form_for @slogan , :url => { :controller => 'slogan', :action => 'update' } do |f| %>
-            <%= f.text_area :description, class: "form-control", :rows => "2", :cols => "25" %>
-            <%= link_to '返回', :back, class: "btn btn-primary" %>
-            <%= f.submit "確認修改", class: "btn btn-warning", :data => { :confirm => "確定要修改嗎？" }  %>
-        <% end %>
-        </div>
-        </div>
-        
-    </div>
-</div>
-</body>
-</html>
+<%= form_for @slogan, :url => { :controller => 'slogan', :action => 'update' } do |f| %>
+  <%= render :partial => 'form', :locals => { :f => f } %>
+  <div align="center">
+    <%= f.submit "更新", class: "btn btn-warning", :data => { :confirm => "確認要更新嗎？" } %>
+    <%= link_to "返回", :back, class: "btn btn-primary" %>
+  </div>
+<% end %>
