fix slogan form

--- a/app/views/slogan/_form.html.erb
+++ b/app/views/slogan/_form.html.erb
@@ -1,7 +1,6 @@
 <div class="container" align="center" style="margin-top: 100px;">
   <div class="form-grop">
-    <%= f.label :description, "標語" %><br>
-    <%= f.text_field :description, class: "form-control" %>
+    <%= f.text_field :description, class: "form-control", :placeholder => "換行請用<br>標籤" %>
   </div>
   <br>
   <div class="form-grop">
