--- a/app/views/slogan/index.html.erb
+++ b/app/views/slogan/index.html.erb
@@ -69,3 +69,16 @@
 	</div>
 </div>
 </div>
+
+
+<script>
+var url = window.location;
+// Will only work if string in href matches with location
+$('ul.nav a[href="'+ url +'"]').parent().addClass('active');
+
+// Will also work for relative and absolute hrefs
+$('ul.nav a').filter(function() {
+    return this.href == url;
+}).parent().addClass('active');
+</script>
+
