--- a/app/views/courses/search/_search_js.html.erb
+++ b/app/views/courses/search/_search_js.html.erb
@@ -1,19 +1,24 @@
 <script>
-	function clean_input(obj){
-		obj.next().val("");
-	//	$("#search").click();
-	}
-	function change_degree(obj){
-		var dept_sel=[];
-		dept_sel['0']='';
-		dept_sel['1']='<%=j render "courses/search/undergrad_options" %>'
-		dept_sel['2']='<%=j render "courses/search/common_options" %>'
-		dept_sel['3']='<%=j render "courses/search/graduate_options" %>'
-		if(obj.val()!="0"){
-		$("#q_department_id_eq").html(dept_sel[obj.val()]);
-		$("#q_course_details_department_id_eq").html(dept_sel[obj.val()]);//if it's in course_maps/edit
-		}
-	}
-
+  function clean_input(obj){
+    obj.next().val("");
+  //	$("#search").click();
+  }
+  function change_degree(obj){
+    var dept_sel=[];
+    dept_sel['0']='';
+    dept_sel['1']='<%=j render "courses/search/undergrad_options" %>'
+    dept_sel['2']='<%=j render "courses/search/common_options" %>'
+    dept_sel['3']='<%=j render "courses/search/graduate_options" %>'
+    var sel_chname = {'1': '大學部', '2': '大學部共同', '3': '研究所'};
+    if(obj.val()!="0"){
+      $("#q_department_id_in_string").html(dept_sel[obj.val()]);
+      $("#q_course_details_department_id_eq").html(dept_sel[obj.val()]);//if it's in course_maps/edit
+      var sel_all = $("#q_department_id_in_string").children().toArray().map(function(obj) { return obj.value;}).join(" ");
+      $("#q_department_id_in_string").prepend($("<option></option>")
+                                     .attr("value", sel_all)
+                                     .attr("selected", "selected")
+                                     .text('所有' + sel_chname[obj.val()] + '課程'));
+    }
+  }
 
 </script>
