fix homepage header's background-color & FB's URL

--- a/app/assets/stylesheets/new-index.css.scss
+++ b/app/assets/stylesheets/new-index.css.scss
@@ -136,7 +136,7 @@ aside {
 @media(min-width:768px) {
     .navbar-default {
         border-color: rgba(255,255,255,.3);
-        background-color: transparent;
+        background-color: rgba(0,0,0,.7);
     }
 
     .navbar-default .navbar-header .navbar-brand {
