--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -74,7 +74,7 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<%=link_to "問題回報", "https://www.facebook.com/messages/nctuplus",class:"page-scroll",target:"_blank" %>
+					<%=link_to "問題回報", "https://www.facebook.com/messages/t/nctuplus",class:"page-scroll",target:"_blank" %>
 				</li>
 				<li>
 					<%=link_to "課程收藏", "javascript:void(0);",class:"page-scroll", onClick:"showCart();" %>
